--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,10 @@ jobs:
       uses: gradle/actions/setup-gradle@v4
 
     - name: Run tests
-      run: ./gradlew test
+      run: ./gradlew test --configuration-cache
       
     - name: Run build
-      run: ./gradlew build
+      run: ./gradlew build --configuration-cache
       
     - name: Upload test results
       uses: actions/upload-artifact@v4
